View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0002883 | Open CASCADE | OCCT:Visualization | public | 2003-06-11 18:41 | 2015-02-07 08:42 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0002883: It is impossible to set material, color and transparency to compound | ||||
Description | Can't set material, color and transparency to compound if compound contains vertex or edge. | ||||
Steps To Reproduce | Compound containing Edge, Vertex, Solid and Face:pload MODELING VISUALIZATION vertex v -20 10 -30 vertex ve1 -10 10 10 vertex ve2 0 10 10 edge e ve1 ve2 sphere s -80 0 0 150 mkface f s 0.1 0.7 0.2 0.9 box s -60 0 0 30 60 40 compound v e f s c vinit View1 vclear vaxo vsetdispmode 1 vdisplay c vfit vsetmaterial c JADE Presentation in 2 viewers: pload MODELING VISUALIZATION box b1 0 0 0 1 2 3 box b2 4 0 0 3 1 2 vinit drv1/v1/v1 vsetdispmode 1 vdisplay b1 b2 vfit vinit drv1/v2/v1 vsetdispmode 1 vdisplay b1 b2 vfit vsetcolor b1 RED vactivate drv1/v1/v1 vdump v1.png vactivate drv1/v2/v1 vdump v2.png diffimage v1.png v2.png 0 0 0 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug2883_1 bug2883_2 | ||||
|
Dear aba, please try to reproduce the issue on current master. |
|
Material and transparency are set for objects in compound if they support shading display mode. Color, material and transparency were not set for some primitives in compound if its presentation has several graphic groups. Iteration though all groups is added on setting color, material and transparency for AIS_Shape. Iteration through all presentation was added on setting color, material and transparency for AIS_Shape to change presentations in all viewers. The git branch CR2883 is ready for review. Dear san, please review. |
|
Dear kgv, please review the branch CR2883. |
|
Please test branch CR2883_1 with minor remarks applied. The original problem can not be reproduced on normal AIS_Shape object, because StdPrs_ShadedShape::Add() creates only single shaded group and at the end of presentation. Thus first test script in Steps To Reproduce works fine without patch. |
|
Dear BugMaster, Branch CR2883_1 (and products from GIT master) was compiled on Linux, Windows and MacOS platforms and tested. SHA-1: c16727f8139e6508f123844e86d68a4945052222 Number of compiler warnings: occt component : Linux: 17 (17 on master) Windows: 0 (0 on master) MacOS: 202 (205 on master) products component : Linux: 11 (11 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions Testing cases: bugs vis bug2883_1 - OK http://occt-tests/CR2883-1-master-occt/Debian60-64/bugs/vis/bug2883_1.html http://occt-tests/CR2883-1-master-occt/Windows-32-VC9/bugs/vis/bug2883_1.html bugs vis bug2883_2 - OK http://occt-tests/CR2883-1-master-occt/Debian60-64/bugs/vis/bug2883_2.html http://occt-tests/CR2883-1-master-occt/Windows-32-VC9/bugs/vis/bug2883_2.html Testing on Linux: Total MEMORY difference: 356557204 / 357326856 Total CPU difference: 55771.129999999735 / 56363.43999999993 Testing on Windows: Total MEMORY difference: 379499028 / 379613888 Total CPU difference: 44763.734375 / 35503.203125 There are no differences in images found by testdiff. |
occt: master 48cc825e 2014-05-22 13:33:02
Committer: apn Details Diff |
0002883: It is impossible to set material, color and transparency to compound Fast shading presentation update on setting color, material and transparency for AIS_Shape: - Iterate through all groups not only last one. - Iterate through all presentation (to change presentations in all viewers). Added test cases bugs/vis/bug2883_1 and bugs/vis/bug2883_2 |
Affected Issues 0002883 |
|
mod - src/AIS/AIS_Shape.cxx | Diff File | ||
add - tests/bugs/vis/bug2883_1 | Diff File | ||
add - tests/bugs/vis/bug2883_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2003-06-18 13:14 | bugmaster | Assigned To | bugmaster => vtn |
2003-06-18 13:14 | bugmaster | Status | new => assigned |
2003-08-11 17:01 |
|
CC | => aki |
2003-08-11 17:05 |
|
CC | => enk |
2003-08-11 17:23 |
|
CC | => |
2003-08-11 17:31 |
|
CC | => ofv |
2003-08-11 17:36 |
|
CC | => inv |
2003-08-11 18:11 |
|
CC | => |
2003-08-11 18:12 |
|
CC | => jgv |
2005-01-12 16:40 | bugmaster | Assigned To | vtn => san |
2011-08-02 11:24 | bugmaster | Category | OCCT:VIZ => OCCT:Visualization |
2014-02-05 14:35 | kgv | Note Added: 0027767 | |
2014-02-05 14:35 | kgv | Assigned To | san => aba |
2014-02-05 14:35 | kgv | Status | assigned => feedback |
2014-02-05 14:35 | kgv | Fixed in Version | EMPTY => |
2014-02-05 14:35 | kgv | Target Version | => 6.7.1 |
2014-02-05 14:35 | kgv | Description Updated | |
2014-02-05 15:05 | kgv | Relationship added | has duplicate 0012132 |
2014-04-04 17:28 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-17 14:45 |
|
Relationship added | related to 0024855 |
2014-05-15 10:58 |
|
Status | feedback => assigned |
2014-05-15 11:04 |
|
Note Added: 0029343 | |
2014-05-15 11:04 |
|
Assigned To | aba => san |
2014-05-15 11:04 |
|
Status | assigned => resolved |
2014-05-15 16:10 |
|
Note Edited: 0029343 | |
2014-05-15 19:19 |
|
Assigned To | san => kgv |
2014-05-15 19:20 |
|
Note Added: 0029358 | |
2014-05-16 08:32 | kgv | Steps to Reproduce Updated | |
2014-05-16 08:37 | kgv | Note Added: 0029364 | |
2014-05-16 08:37 | kgv | Assigned To | kgv => bugmaster |
2014-05-16 08:37 | kgv | Status | resolved => reviewed |
2014-05-19 14:20 | apn | Assigned To | bugmaster => apn |
2014-05-21 11:26 | apn | Note View State: 0029364: private | |
2014-05-21 11:26 | apn | Note View State: 0029364: public | |
2014-05-21 14:08 | apn | Note Added: 0029436 | |
2014-05-21 14:12 | apn | Test case number | => bugs vis bug2883_1 bug2883_2 |
2014-05-21 14:12 | apn | Assigned To | apn => bugmaster |
2014-05-21 14:12 | apn | Status | reviewed => tested |
2014-05-23 14:25 | apn | Changeset attached | => occt master 48cc825e |
2014-05-23 14:25 | apn | Assigned To | bugmaster => apn |
2014-05-23 14:25 | apn | Status | tested => verified |
2014-05-23 14:25 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |
2015-02-07 08:42 |
|
Relationship added | related to 0025803 |